Decrease headline font size to make sure it doesn't wrap for most users
--HG--
extra : rebase_source : 38c7567a766f6e1ed38d45c8f3d8ce5571b91acf

--- a/skin/firstRun.css
+++ b/skin/firstRun.css
@@ -15,7 +15,7 @@ body
   margin-top: 30px;
   padding-left: 148px;
   line-height: 1;
-  font-size: 250%;
+  font-size: 220%;
   font-weight: normal;
   background-image: url(/icons/abp-128.png);
   background-position: 0% 50%;
